<resources>
    <string name="app_name">Счетчики воды. Минск</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--/////////////nav_drawer///////////////////-->
    <string name="nav_indications">Показания счетчиков</string>
    <string name="nav_person">Данные плательщика</string>
    <string name="nav_statistics">Статистика расхода</string>
    <string name="nav_info">О программе</string>
    <string name="nav_send">Связаться</string>


    <!--//////////////////////frag_enter_indic//////////////-->
    <string name="frag_enter_ind_current">Показания за текущий период</string>
    <string name="frag_enter_ind_last">Показания за предыдущий период</string>
    <string name="frag_enter_ind_current_cold">%s холодной воды</string>
    <string name="frag_enter_ind_current_hot">%s горячей воды</string>
    <string name="frag_enter_ind_sendBtn_caption">Отправить показания</string>
    <string name="frag_enter_ind_summary">Суммарный расход за текущий период %d м³</string>
    <string name="frag_enter_ind_delta">+%d м³</string>
    <string name="frag_enter_ind_title_warn">Подтвердите действие</string>
    <string name="frag_enter_ind_present_message">Показания за текущий месяц уже введены</string>
    <string name="frag_enter_ind_flatselect_caption">Квартира</string>
    <string name="frag_enter_ind_flatselect">Квартира</string>
    <string name="frag_enter_ind_message_warn">Будет отправлено СМС следующего содержания: \n
    %s</string>

    <string name="act_enter_alert">Пожалуйста, создайте профиль плательщика</string>

    <!--///////////////frag_profile//////////////////-->
    <string name="frag_prof_name_hint">Имя</string>
    <string name="frag_prof_secname_hint">Фамилия</string>
    <string name="frag_prof_otch_hint">Отчество</string>
    <string name="frag_prof_user_caption">ФИО плательщика</string>
    <string name="frag_prof_address_caption">Адрес помещения</string>
    <string name="frag_prof_street_hint">Улица</string>
    <string name="frag_prof_building_hint">Дом</string>
    <string name="frag_prof_flat_hint">Квартира</string>
    <string name="frag_prof_tele_caption">Прием показаний ИПУ</string>
    <string name="frag_prof_tele_hint">Телефон в формате 375 ХХ ХХХХХХХ</string>
    <string name="frag_prof_info_title">Информация</string>
    <string name="frag_prof_info_message">Номер телефона для отправки СМС с показаниями ИПУ можно узнать в извещении о размере платы за ЖКУ,  контакт-центре ЖКХ, или на сайте Единого расчетно-справочного центра г. Минска https://goo.gl/IpydLe</string>
    <string name="frag_prof_savebtn_caption">Сохранить</string>
    <string name="frag_prof_noname_message">Не указано имя</string>
    <string name="frag_prof_nosecname_message">Не указана фамилия</string>
    <string name="frag_prof_nootch_message">Не указано отчество</string>
    <string name="frag_prof_nostreet_message">Не указана улица</string>
    <string name="frag_prof_nobuilding_message">Не указан дом</string>
    <string name="frag_prof_noflat_message">Не указана квартира</string>
    <string name="frag_prof_notelephone_message">Не указан телефон</string>
    <string name="frag_prof_nometers_message">Не добавлено ни одного счетчика</string>


    <!--///////////////frag_stat////////-->
    <string name="frag_stat_name">Статистика расхода</string>
    <string name="frag_stat_spinner_capt">Вид диаграммы</string>

    <!--///////////////frag_about///////-->
    <string name="frag_about_info">\n
        Приложение предназначено для ввода показаний ИПУ расхода воды, отправки данных в РСЦ посредством СМС, ведения статистики.\n
        Приложение не отсылает личных данных пользователя никому, кроме РСЦ. \n
        Разработчик приложения не несет ответственности за неправильно введенные данные пользователем. \n

        С радостью выслушаю Ваши предложения, пожелания, замечания. Для связи с разработчиком воспользуйтесь пунктом \"Связаться\" главного меню приложения. \n
    </string>

    <!--//////////////frsg_add/////-->
    <string name="frag_add_month">Месяц</string>
    <string name="frag_add_year">Год</string>
    <string name="frag_add_flat">Квартира</string>
    <string name="frag_add_add">Добавить показания</string>
    <string name="frag_add_add_flat">Добавить показания для выбранной квартиры</string>
    <string name="frag_add_add_message">Пожалуйста, добавьте информацию о плательщике!</string>

    <!--////////welcome_screens//////////-->
    <string name="welcom_1_title">Простота и удобство</string>
    <string name="welcom_1_text">Добавляйте неограниченное количество квартир и счетчиков</string>

    <string name="welcom_2_title">Статистика</string>
    <string name="welcom_2_text">Ведите статистику расхода холодной и горячей воды</string>

    <string name="welcom_3_title">Учёт</string>
    <string name="welcom_3_text">Отправляйте показания счетчиков в Ваш РСЦ</string>

    <string name="version">Версия 0.1.2</string>

    <string-array name="streets">
        <item>Улица</item>
        <item>Проспект</item>
        <item>Переулок</item>
        <item>Проезд</item>
        <item>Бульвар</item>
    </string-array>

    <string-array name="charts">
        <item>Линейный график</item>
        <item>Гистограмма</item>
    </string-array>

    <string-array name="month">
        <item>январь</item>
        <item>февраль</item>
        <item>март</item>
        <item>апрель</item>
        <item>май</item>
        <item>июнь</item>
        <item>июль</item>
        <item>август</item>
        <item>сентябрь</item>
        <item>октябрь</item>
        <item>ноябрь</item>
        <item>декабрь</item>
    </string-array>
</resources>
