<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
       <group android:checkableBehavior="single">
           <item
               android:id="@+id/nav_indications"
               android:icon="@drawable/ic_nav_indications"
               android:title="@string/nav_indications" />

           <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_nav_statistrics"
            android:title="@string/nav_statistics" />
       </group>

        <group>

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_nav_person"
                android:title="@string/nav_person" />

            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_nav_info"
                android:title="@string/nav_info" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send" />
        </group>
    </group>
    

</menu>
