<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingBottom="16dp"
    >
    <android.support.v7.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxHeight="300dp"
        android:paddingLeft="@dimen/editText_padding"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/frag_add_coldwater_recycler"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline1"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/frag_add_current_cold"
        android:maxLines="1"
        tools:text="56"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:text="@string/frag_enter_ind_current_cold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/frag_add_current_cold"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/frag_add_flat_spinner"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="@+id/frag_add_coldwater_recycler"
        android:textAlignment="center" />

    <TextView
        android:text="@string/frag_enter_ind_current_hot"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:id="@+id/frag_add_current_hot"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="@+id/frag_add_current_cold"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="367dp"
        android:id="@+id/guideline1"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:text="@string/frag_add_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frag_add_year_caption"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/frag_add_year_spinner"
        app:layout_constraintTop_toBottomOf="@+id/frag_add_year_caption"
        app:layout_constraintLeft_toLeftOf="@+id/frag_add_year_caption"
        android:layout_marginTop="8dp" />

    <TextView
        android:text="@string/frag_add_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frag_add_month_caption"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/frag_add_year_caption" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/frag_add_month_spinner"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/frag_add_month_caption"
        app:layout_constraintLeft_toLeftOf="@+id/frag_add_month_caption"
        android:entries="@array/month"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:maxHeight="300dp"
        android:paddingLeft="@dimen/editText_padding"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/frag_add_hotwater_recycler"
        android:maxLines="1"
        tools:text="31"
        tools:ignore="RtlHardcoded,RtlSymmetry"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="@+id/frag_add_coldwater_recycler"
        app:layout_constraintLeft_toLeftOf="@+id/guideline1"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp" />

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/frag_add_flat_spinner"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frag_add_year_spinner"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.66"
        android:spinnerMode="dialog"/>

</android.support.constraint.ConstraintLayout>